# Refinaid

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/: dependabot.yml
apps/aws-cdk-deployed/: app.py
apps/chatger/: README.md  build.sh  docker-compose.yml  run.py
apps/chatger/app/: main.py
apps/chatger/toy_example/: auth.py
apps/docs/: next.config.mjs  package-lock.json  package.json  theme.config.tsx
apps/docs/pages/: _app.tsx  _meta.json  _meta.ts  about.mdx  features.mdx  reference.md
apps/gradio-toys/: pyproject.toml
apps/gradio-toys/block_chained_events/: app.py
apps/gradio-toys/markdown-parser/: README.md
apps/gradio-toys/online-judge/: app.py
apps/gradio-toys/tw-stock-calculator/: app.py
apps/landing/: next.config.js  package.json  tailwind.config.js
apps/server/: README.md
apps/server/app/: main.py
apps/simple-ai/: README.md
apps/simple-ai/app/: main.py
apps/web/: .env.example  Dockerfile  LICENSE  README.md  TODOs.md  eslint.config.mjs  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts
apps/web/app/: main.py
apps/web/messages/: en.json  tw.json
apps/web/src/: middleware.ts
deploy/: README.md  main.tf  outputs.tf
deploy/sg-demo/: demo.js
docs/: package.json  theme.config.tsx
docs/pages/: _meta.json  about.mdx
web/: package-lock.json
web/src/.pages-legacy/: projects.tsx  team.tsx
web/src/app/: layout.tsx
web/src/components/: footer.tsx  header.tsx  (+1 more)
(+149 files in other folders)
