[project]
name = "refinaid"
version = "0.3.2"
description = ""
authors = [
    {name = "Hugo ChunHo Lin",email = "hugo970217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio (>=5.12.0,<6.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
