[project]
name = "refinaid"
version = "0.5.0"
description = ""
authors = [
    {name = "Abbass Sharara",email = "official@lovedbymen.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio (>=5.12.0,<6.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
